--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <button id="cost10">COST:1.00e80</button>
 <button id="cost11">COST:1.00e107</button>
 <button id="cost12">COST:1.00e133</button>
+<button id="cost13">COST:1.00e161</button>
+<button id="cost14">COST:1.00e190</button>
 <h3>Cookies Power Upgrades</h3>
 <button id="cost2">COST:6000</button>
 <h3>Layout</h3>
